<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.detail.CoinDetailActivity">

    <ImageView
        android:id="@+id/iv_labelCoin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/slash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_labelCoin" />

    <TextView
        android:id="@+id/tv_fromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="@+id/tv_separator"
        app:layout_constraintEnd_toStartOf="@+id/tv_separator"
        app:layout_constraintTop_toTopOf="@+id/tv_separator" />

    <TextView
        android:id="@+id/tv_tSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/USD"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@+id/tv_separator"
        app:layout_constraintStart_toEndOf="@+id/tv_separator"
        app:layout_constraintTop_toTopOf="@+id/tv_separator" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_separator">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_labelPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/priceLabel"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_currentPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tv_labelPrice"
                app:layout_constraintTop_toTopOf="@+id/tv_labelPrice" />

            <TextView
                android:id="@+id/tv_labelMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/label_min"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_labelPrice" />

            <TextView
                android:id="@+id/tv_min"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/tv_labelMin"
                app:layout_constraintTop_toTopOf="@+id/tv_labelMin" />

            <TextView
                android:id="@+id/tv_labelMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/label_max"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_labelMin" />

            <TextView
                android:id="@+id/tv_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/tv_labelMax"
                app:layout_constraintTop_toTopOf="@+id/tv_labelMax" />

            <TextView
                android:id="@+id/tv_labelLastUse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/label_last_use"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_labelMax" />

            <TextView
                android:id="@+id/tv_lastUse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/tv_labelLastUse"
                app:layout_constraintTop_toTopOf="@+id/tv_labelLastUse" />

            <TextView
                android:id="@+id/tv_labelLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/label_update"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_labelLastUse" />

            <TextView
                android:id="@+id/tv_lastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="8dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/tv_labelLastUpdate"
                app:layout_constraintTop_toTopOf="@+id/tv_labelLastUpdate" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>